--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate & next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -16,15 +16,22 @@
     "@types/node": "18.16.3",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "^1.4.0",
+    "cytoscape": "^3.24.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "framer-motion": "^10.12.4",
     "next": "13.3.1",
+    "next-swagger-doc": "^0.3.6",
     "react": "18.2.0",
+    "react-cytoscapejs": "^2.0.0",
     "react-dom": "18.2.0",
+    "swagger-ui-react": "^4.18.3",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-cytoscapejs": "^1.2.2",
+    "@types/swagger-ui-react": "^4.18.0",
     "prisma": "^4.13.0"
   }
 }
